# raggy

./: .gitignore  AGENTS.md  Cargo.toml  README.md  download_model.sh  flake.nix  rust-toolchain.toml  spec
benches/: cosine_similarity.rs  embedding_single_word.rs
src/: cache.rs  chunking.rs  lib.rs  main.rs  model.rs  server.rs
tests/: integration.rs
