[package]
name = "raggy"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.8", default-features = false, features = [
    "server",
    "macros",
    "transport-io",
    "base64",
] }
tokio = { version = "1", default-features = false, features = [
    "macros",
    "rt",
    "sync",
    "time",
] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
bincode = { version = "2", features = ["serde"] }
schemars = "0.8"
anyhow = "1.0"
thiserror = "2.0"
clap = { version = "4", features = ["derive"] }
candle-core = "=0.9.0"
candle-nn = "=0.9.0"
candle-transformers = "=0.9.0"
tokenizers = { version = "0.21", features = ["onig"] }
hf-hub = { version = "0.4", default-features = false, features = [
    "tokio",
    "rustls-tls",
] }
content_inspector = "0.2"
ignore = "0.4"
grep-matcher = "0.1"
grep-regex = "0.1"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
sha2 = "0.10"
tree-sitter = "0.26.5"
tree-sitter-rust = "0.24.0"
wide = "0.7.33"

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "cosine_similarity"
harness = false

[[bench]]
name = "embedding_single_word"
harness = false
